--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "chart.js": "2.6.0",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
+    "rc-slider": "^8.4.0",
     "react-chartjs-2": "2.6.1",
     "react-router-dom": "4.2.2",
     "react-transition-group": "^1.2.0",
