--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "chart.js": "2.6.0",
+    "django-react-csrftoken": "^1.0.3",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
     "rc-slider": "^8.4.0",
