--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,11 +35,11 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "chart.js": "2.6.0",
-    "django-react-csrftoken": "^1.0.3",
     "font-awesome": "^4.7.0",
     "history": "4.7.2",
     "rc-slider": "^8.4.0",
     "react-chartjs-2": "2.6.1",
+    "react-cookie": "^1.0.5",
     "react-router-dom": "4.2.2",
     "react-transition-group": "^1.2.0",
     "reactstrap": "^4.8.0",
