--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-chartjs-2": "2.6.1",
     "react-cookie": "^1.0.5",
     "react-router-dom": "4.2.2",
+    "react-spinners": "^0.2.5",
     "react-transition-group": "^1.2.0",
     "reactstrap": "^4.8.0",
     "simple-line-icons": "^2.4.1"
