--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "rc-slider": "^8.4.0",
     "react-chartjs-2": "2.6.1",
     "react-cookie": "^1.0.5",
+    "react-json-view": "^1.16.0",
     "react-router-dom": "4.2.2",
     "react-spinners": "^0.2.5",
     "react-transition-group": "^1.2.0",
